# PDSapp

./: CMakeLists.txt  ClickableLabel.cpp  ClickableLabel.h  EditSessionWindow.cpp  EditSessionWindow.h  FrontaStatu.cpp  FrontaStatu.h  MainWindow.cpp  MainWindow.h  QFrontaWidget.cpp  QFrontaWidget.h  SideWindow.cpp  SideWindow.h  Stat.cpp  Stat.h  main.cpp
res/: res.qrc
